# ReactoChem

./: .readthedocs.yaml  LICENSE  README.md  env-dev.yml  env.yml  environment.yml  environment_dev.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
docs/: requirements.txt
docs/src/: conf.py  howthisworks.rst  howtouse.rst  index.rst  modules.rst  reactions.rst  reactors.rst
notebooks/: project_report.ipynb
src/reactochem/: __init__.py  reactions.py  reactors.py  temp.py  temporaire.py
tests/: test_reactions.py  test_reactors.py
