[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ReactoChem"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Simulate chemical reactions in different types of reactors"
dependencies = [
    "numpy=1.26.4",
    "matplotlib=3.8.4",
    "scipy=1.13.0",
    "sympy=1.12"
]
authors = [
    {name = "Jonathan Ryser - Arsène Tergalinsky", email = "jrjonathanryser@gmail.com - arsene.sauterel@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/jonathanrsr/ReactoChem"

[project.optional-dependencies]
test = [
    "pytest=7.4.0"
]

[tool.hatch.version]
path = "src/reactochem/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]